--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/collection/190727/720x600">
+            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?health">
           </div>
         </div>
       </section>
