--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1203x503">
+                <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body,gym">
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Shooting Stars</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1204x504">
+                <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body,gym">
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The Catalyzer</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -90,7 +90,7 @@
             </div>
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1205x505">
+                <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body,gym">
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The 400 Blows</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -104,6 +104,6 @@
         </div>
       </section>
       <!-- Content -->
-      
+
 </body>
 </html>
