--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">How to make your brain more productive?</h1>
-            <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+            <p class="mb-8 leading-relaxed">Just as exercise improves your physical health, brain workouts strengthen your mind, boosting your memory and thinking skills. Even better, it’s never too late to begin exercising your most important muscle. Read on for 10 easy ways to stimulate your brain.</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Read Now</button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/460x500/?health,body,gym">
+            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/460x500/?health,gym">
           </div>
         </div>
       </section>
@@ -66,7 +66,19 @@
               <div class="rounded-lg h-64 overflow-hidden">
                 <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
               </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Shooting Stars</h2>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Top 10 gadgets to track your health</h2>
+              <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+              <a class="text-indigo-500 inline-flex items-center mt-3">Read More
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Role of health in daily work</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
               <a class="text-indigo-500 inline-flex items-center mt-3">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
@@ -78,19 +90,7 @@
               <div class="rounded-lg h-64 overflow-hidden">
                 <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
               </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The Catalyzer</h2>
-              <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-              <a class="text-indigo-500 inline-flex items-center mt-3">Learn More
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
-            </div>
-            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-              <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
-              </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The 400 Blows</h2>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Daily exercise leads to good health</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
               <a class="text-indigo-500 inline-flex items-center mt-3">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
@@ -115,12 +115,12 @@
             <div class="py-8 px-4 lg:w-1/3">
               <div class="h-full flex items-start">
                 <div class="w-12 flex-shrink-0 flex flex-col text-center leading-none">
-                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Jul</span>
-                  <span class="font-medium text-lg text-gray-800 title-font leading-none">18</span>
+                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Apr</span>
+                  <span class="font-medium text-lg text-gray-800 title-font leading-none">25</span>
                 </div>
                 <div class="flex-grow pl-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">CATEGORY</h2>
-                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">The 400 Blows</h1>
+                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">Health</h2>
+                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">How to loose your weight in 10 days?</h1>
                   <p class="leading-relaxed mb-5">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                   <a class="inline-flex items-center">
                     <img alt="blog" src="https://dummyimage.com/103x103" class="w-8 h-8 rounded-full flex-shrink-0 object-cover object-center">
@@ -134,8 +134,8 @@
             <div class="py-8 px-4 lg:w-1/3">
               <div class="h-full flex items-start">
                 <div class="w-12 flex-shrink-0 flex flex-col text-center leading-none">
-                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Jul</span>
-                  <span class="font-medium text-lg text-gray-800 title-font leading-none">18</span>
+                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Apr</span>
+                  <span class="font-medium text-lg text-gray-800 title-font leading-none">24</span>
                 </div>
                 <div class="flex-grow pl-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">CATEGORY</h2>
@@ -153,8 +153,8 @@
             <div class="py-8 px-4 lg:w-1/3">
               <div class="h-full flex items-start">
                 <div class="w-12 flex-shrink-0 flex flex-col text-center leading-none">
-                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Jul</span>
-                  <span class="font-medium text-lg text-gray-800 title-font leading-none">18</span>
+                  <span class="text-gray-500 pb-2 mb-2 border-b-2 border-gray-200">Apr</span>
+                  <span class="font-medium text-lg text-gray-800 title-font leading-none">23</span>
                 </div>
                 <div class="flex-grow pl-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">CATEGORY</h2>
