--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                   <span class="font-medium text-lg text-gray-800 title-font leading-none">24</span>
                 </div>
                 <div class="flex-grow pl-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">CATEGORY</h2>
-                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">Shooting Stars</h1>
+                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">Health</h2>
+                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">Top 10 technologies used in health industry</h1>
                   <p class="leading-relaxed mb-5">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                   <a class="inline-flex items-center">
                     <img alt="blog" src="https://dummyimage.com/102x102" class="w-8 h-8 rounded-full flex-shrink-0 object-cover object-center">
@@ -157,8 +157,8 @@
                   <span class="font-medium text-lg text-gray-800 title-font leading-none">23</span>
                 </div>
                 <div class="flex-grow pl-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">CATEGORY</h2>
-                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">Neptune</h1>
+                  <h2 class="tracking-widest text-xs title-font font-medium text-indigo-500 mb-1">Health</h2>
+                  <h1 class="title-font text-xl font-medium text-gray-900 mb-3">Make your mind relaxed</h1>
                   <p class="leading-relaxed mb-5">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                   <a class="inline-flex items-center">
                     <img alt="blog" src="https://dummyimage.com/101x101" class="w-8 h-8 rounded-full flex-shrink-0 object-cover object-center">
