--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Top 10 gadgets to track your health</h2>
-              <p class="text-base leading-relaxed mt-2">The latest technologies in software and communication have changed the landscape of the healthcare sector. Electronic medical records (EMR), telehealth, mobile, and wireless health are new and emerging trends in healthcare. Digital health gadgets and apps are transitioning to become a new form of medical prescriptions worldwide.</p>
+              <p class="text-base leading-relaxed mt-2">The latest technologies in software and communication have changed the landscape of the healthcare sector. Electronic medical records (EMR), telehealth, mobile, and wireless health are new and emerging trends in healthcare.</p>
               <a class="text-indigo-500 inline-flex items-center mt-3">Read More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -80,7 +80,7 @@
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Role of health in daily work</h2>
               <p class="text-base leading-relaxed mt-2">People are creatures of habit, and routines offer a way to promote health and wellness through structure and organization. Having a routine can greatly improve your health.</p>
-              <a class="text-indigo-500 inline-flex items-center mt-3">Read More More
+              <a class="text-indigo-500 inline-flex items-center mt-3">Read More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
