--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1203x503/?health,body">
               </div>
               <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Daily exercise leads to good health</h2>
-              <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-              <a class="text-indigo-500 inline-flex items-center mt-3">Learn More
+              <p class="text-base leading-relaxed mt-2">Regular physical activity can improve your muscle strength and boost your endurance. Exercise delivers oxygen and nutrients to your tissues and helps your cardiovascular system work more efficiently.</p>
+              <a class="text-indigo-500 inline-flex items-center mt-3">Read More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:none; --darkreader-inline-stroke:currentColor;">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
@@ -106,8 +106,8 @@
 
       <!-- Previous Articles -->
       <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
-        <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Want To Find Some Previous Articles?</h1>
-        <!-- <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Street art subway tile salvia four dollar toast bitters selfies quinoa yuccie synth meditation iPhone intelligentsia prism tofu. Viral gochujang bitters dreamcatcher.</p> -->
+        <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Want to find our previous articles? Here's the place.</h1>
+        <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Street art subway tile salvia four dollar toast bitters selfies quinoa yuccie synth meditation iPhone intelligentsia prism tofu. Viral gochujang bitters dreamcatcher.</p>
       </div>
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
